--- a/Prog3ProjektHotelReservierungsSystem/src/main/resources/com/example/prog3projekthotelreservierungssystem/Dashboard.fxml
+++ b/Prog3ProjektHotelReservierungsSystem/src/main/resources/com/example/prog3projekthotelreservierungssystem/Dashboard.fxml
@@ -9,17 +9,17 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="518.0" prefWidth="705.0" style="-fx-background-color: #C39746;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.gui.DashboardController">
+<AnchorPane prefHeight="518.0" prefWidth="705.0" stylesheets="@styles/style.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.gui.DashboardController">
     <children>
-        <Text layoutX="57.0" layoutY="53.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Dashboard">
+        <Text layoutX="32.0" layoutY="60.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="modal-title" text="Dashboard">
             <font>
                 <Font size="16.0" />
             </font>
         </Text>
-        <ListView fx:id="listView" layoutX="48.0" layoutY="90.0" prefHeight="363.0" prefWidth="622.0" />
-        <Button layoutX="48.0" layoutY="469.0" mnemonicParsing="false" onAction="#onClickAddBuchung" prefHeight="26.0" prefWidth="103.0" style="-fx-cursor: HAND;" text="Add Buchung" />
-        <Button fx:id="cancelBtn" layoutX="397.0" layoutY="34.0" mnemonicParsing="false" onAction="#onClickCancelBooking" prefHeight="25.0" prefWidth="77.0" text="Stornieren" />
-        <ChoiceBox fx:id="bookingChoiceBox" layoutX="209.0" layoutY="34.0" prefWidth="150.0" value="Alle">
+        <ListView fx:id="listView" layoutX="32.0" layoutY="90.0" prefHeight="363.0" prefWidth="628.0" />
+        <Button layoutX="32.0" layoutY="469.0" mnemonicParsing="false" onAction="#onClickAddBuchung" prefHeight="29.0" prefWidth="113.0" styleClass="dashboard-btn" text="Add Buchung" />
+        <Button fx:id="cancelBtn" layoutX="388.0" layoutY="35.0" mnemonicParsing="false" onAction="#onClickCancelBooking" prefHeight="29.0" prefWidth="92.0" styleClass="cancel-btn" text="Stornieren" />
+        <ChoiceBox fx:id="bookingChoiceBox" layoutX="203.0" layoutY="34.0" prefWidth="150.0" styleClass="select" value="Alle">
             <items>
                 <FXCollections fx:factory="observableArrayList">
                     <String fx:value="Alle" />
@@ -28,6 +28,6 @@
                 </FXCollections>
             </items>
         </ChoiceBox>
-      <Button layoutX="490.0" layoutY="34.0" mnemonicParsing="false" onAction="#onClickRechnungErstellen" prefHeight="26.0" prefWidth="130.0" text="Rechnung erstellen" />
+      <Button layoutX="510.0" layoutY="35.0" mnemonicParsing="false" onAction="#onClickRechnungErstellen" prefHeight="29.0" prefWidth="150.0" styleClass="dashboard-btn" text="Rechnung erstellen" />
     </children>
 </AnchorPane>
