--- a/Prog3ProjektHotelReservierungsSystem/src/main/resources/com/example/prog3projekthotelreservierungssystem/Gaeste.fxml
+++ b/Prog3ProjektHotelReservierungsSystem/src/main/resources/com/example/prog3projekthotelreservierungssystem/Gaeste.fxml
@@ -1,18 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ListView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="518.0" prefWidth="705.0" style="-fx-background-color: #C39746;" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.gui.GuestsController">
+<AnchorPane prefHeight="518.0" prefWidth="705.0" styleClass="root" stylesheets="@styles/style.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.gui.GaesteController">
     <children>
-        <Text layoutX="57.0" layoutY="53.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Guests">
+        <Text layoutX="33.0" layoutY="51.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="modal-title" text="Guests">
             <font>
                 <Font size="16.0" />
             </font>
         </Text>
-        <ListView fx:id="listView" layoutX="48.0" layoutY="90.0" prefHeight="363.0" prefWidth="622.0" />
-        <Button layoutX="48.0" layoutY="469.0" mnemonicParsing="false" onAction="#onClickAddGuest" prefHeight="26.0" prefWidth="78.0" style="-fx-cursor: HAND;" text="Add Guest" />
-        <Button layoutX="245.0" layoutY="469.0" mnemonicParsing="false" onAction="#onClickDeleteGuest" prefHeight="26.0" prefWidth="78.0" text="Delete" />
+        <ListView fx:id="listView" layoutX="33.0" layoutY="78.0" prefHeight="363.0" prefWidth="650.0" />
+        <Button layoutX="33.0" layoutY="461.0" mnemonicParsing="false" onAction="#onClickAddGuest" prefHeight="29.0" prefWidth="94.0" style="-fx-cursor: HAND;" styleClass="dashboard-btn" text="Add Guest" />
+        <Button layoutX="589.0" layoutY="461.0" mnemonicParsing="false" onAction="#onClickDeleteGuest" prefHeight="29.0" prefWidth="94.0" styleClass="cancel-btn" text="Delete" />
     </children>
 </AnchorPane>
