--- a/Prog3ProjektHotelReservierungsSystem/src/main/resources/com/example/prog3projekthotelreservierungssystem/Main.fxml
+++ b/Prog3ProjektHotelReservierungsSystem/src/main/resources/com/example/prog3projekthotelreservierungssystem/Main.fxml
@@ -1,39 +1,48 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="627.0" prefWidth="834.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.gui.MainController">
+<AnchorPane prefHeight="627.0" prefWidth="834.0" style="-fx-background-color: white;" stylesheets="@styles/style.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.gui.MainController">
    <children>
       <BorderPane fx:id="borderpane" layoutX="293.0" layoutY="52.0" prefHeight="627.2" prefWidth="834.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <left>
-            <VBox prefHeight="627.0" prefWidth="212.0" style="-fx-background-color: grey;" BorderPane.alignment="CENTER">
+            <VBox prefHeight="627.0" prefWidth="233.0" styleClass="menu" BorderPane.alignment="CENTER">
                <children>
-                  <Label prefHeight="44.0" prefWidth="241.0" style="-fx-background-color: silver;" text="        Syria Hotel" textAlignment="CENTER">
-                     <font>
-                        <Font size="23.0" />
-                     </font>
-                  </Label>
-                  <Label />
-                  <Button mnemonicParsing="false" onAction="#onClickOpenBuchungDashboard" prefHeight="59.0" prefWidth="211.0" style="-fx-background-color: grey;" text="Buchungen">
-                     <font>
-                        <Font size="18.0" />
-                     </font>
-                  </Button>
-                  <Button mnemonicParsing="false" onAction="#onClickOpenZimmerDashboard" prefHeight="59.0" prefWidth="211.0" style="-fx-background-color: grey;" text="Zimmer">
-                     <font>
-                        <Font size="18.0" />
-                     </font>
-                  </Button>
-                  <Button mnemonicParsing="false" onAction="#onClickOpenGuestDashboard" prefHeight="59.0" prefWidth="211.0" style="-fx-background-color: grey;" text="Gäste">
-                     <font>
-                        <Font size="18.0" />
-                     </font>
-                  </Button>
+                  <Pane prefHeight="96.0" prefWidth="235.0">
+                     <children>
+                        <ImageView fitHeight="183.0" fitWidth="176.0" layoutX="22.0" layoutY="-37.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@logo.png" />
+                           </image>
+                        </ImageView>
+                     </children>
+                  </Pane>
+                  <Pane prefHeight="357.0" prefWidth="329.0">
+                     <children>
+                        <Button fx:id="Zimmer" layoutX="-8.0" layoutY="122.0" mnemonicParsing="false" onAction="#onClickOpenZimmerDashboard" prefHeight="67.0" prefWidth="232.0" styleClass="menu-btn" text="Zimmer">
+                           <font>
+                              <Font size="18.0" />
+                           </font>
+                        </Button>
+                        <Button fx:id="Buchung" layoutX="-8.0" layoutY="54.0" mnemonicParsing="false" onAction="#onClickOpenBuchungDashboard" prefHeight="68.0" prefWidth="232.0" style="-fx-border-color: #d7dbd8; -fx-border-width: 1 0 1 0;" styleClass="menu-btn" text="Buchungen">
+                           <font>
+                              <Font size="18.0" />
+                           </font>
+                        </Button>
+                        <Button fx:id="Gäste" layoutX="-8.0" layoutY="188.0" mnemonicParsing="false" onAction="#onClickOpenGuestDashboard" prefHeight="72.0" prefWidth="232.0" styleClass="menu-btn" text="Gäste">
+                           <font>
+                              <Font size="18.0" />
+                           </font>
+                        </Button>
+                     </children>
+                  </Pane>
                </children>
             </VBox>
          </left>
