--- a/Prog3ProjektHotelReservierungsSystem/src/main/resources/com/example/prog3projekthotelreservierungssystem/Mitarbeiter.fxml
+++ b/Prog3ProjektHotelReservierungsSystem/src/main/resources/com/example/prog3projekthotelreservierungssystem/Mitarbeiter.fxml
@@ -1,18 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.ListView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="518.0" prefWidth="705.0" style="-fx-background-color: #C39746;" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.gui.MitarbeiterController">
+<AnchorPane prefHeight="518.0" prefWidth="705.0" styleClass="root" stylesheets="@styles/style.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.gui.MitarbeiterController">
     <children>
-        <Text layoutX="57.0" layoutY="53.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Mitarbeiter">
+        <Text layoutX="26.0" layoutY="52.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Mitarbeiter">
             <font>
                 <Font size="16.0" />
             </font>
         </Text>
-        <ListView fx:id="listView" layoutX="48.0" layoutY="90.0" prefHeight="363.0" prefWidth="622.0" />
-        <Button layoutX="48.0" layoutY="469.0" mnemonicParsing="false" onAction="#onClickAddMitarbeiter" prefHeight="26.0" prefWidth="102.0" style="-fx-cursor: HAND;" text="Add Mitarbeiter" />
-        <Button layoutX="245.0" layoutY="469.0" mnemonicParsing="false" onAction="#onClickDeleteMitarbeiter" prefHeight="26.0" prefWidth="78.0" text="Löschen" />
+        <ListView fx:id="listView" layoutX="26.0" layoutY="81.0" prefHeight="400.0" prefWidth="638.0" />
+        <Button fx:id="cancelBtn" layoutX="587.0" layoutY="34.0" mnemonicParsing="false" onAction="#onClickCancelBooking" prefHeight="25.0" prefWidth="77.0" styleClass="dashboard-btn" text="Cancel" />
+        <ChoiceBox fx:id="bookingChoiceBox" layoutX="270.0" layoutY="34.0" prefHeight="25.0" prefWidth="150.0" styleClass="select" />
     </children>
 </AnchorPane>
