--- a/Prog3ProjektHotelReservierungsSystem/src/main/resources/com/example/prog3projekthotelreservierungssystem/Zimmern.fxml
+++ b/Prog3ProjektHotelReservierungsSystem/src/main/resources/com/example/prog3projekthotelreservierungssystem/Zimmern.fxml
@@ -1,18 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ListView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="518.0" prefWidth="705.0" style="-fx-background-color: #C39746;" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.gui.RoomsController">
+<AnchorPane prefHeight="518.0" prefWidth="705.0" styleClass="root" stylesheets="@styles/style.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.gui.ZimmerController">
     <children>
-        <Text layoutX="57.0" layoutY="53.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Zimmern">
+        <Text layoutX="28.0" layoutY="57.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="modal-title" text="Rooms">
             <font>
                 <Font size="16.0" />
             </font>
         </Text>
-        <ListView fx:id="listView" layoutX="48.0" layoutY="90.0" prefHeight="363.0" prefWidth="622.0" />
-      <Button layoutX="48.0" layoutY="469.0" mnemonicParsing="false" onAction="#onClickAddRoom" prefHeight="26.0" prefWidth="87.0" style="-fx-cursor: HAND;" text="Add Zimmer" />
-      <Button layoutX="245.0" layoutY="469.0" mnemonicParsing="false" onAction="#onClickDeleteRoom" prefHeight="26.0" prefWidth="78.0" text="Löschen" />
+        <ListView fx:id="listView" layoutX="28.0" layoutY="86.0" prefHeight="363.0" prefWidth="652.0" />
+      <Button layoutX="28.0" layoutY="469.0" mnemonicParsing="false" onAction="#onClickAddRoom" prefHeight="29.0" prefWidth="98.0" style="-fx-cursor: HAND;" styleClass="dashboard-btn" text="Add Room" />
+      <Button layoutX="602.0" layoutY="469.0" mnemonicParsing="false" onAction="#onClickDeleteRoom" prefHeight="26.0" prefWidth="78.0" styleClass="cancel-btn" text="Delete" />
     </children>
 </AnchorPane>
