--- a/Prog3ProjektHotelReservierungsSystem/src/main/resources/com/example/prog3projekthotelreservierungssystem/addGast.fxml
+++ b/Prog3ProjektHotelReservierungsSystem/src/main/resources/com/example/prog3projekthotelreservierungssystem/addGast.fxml
@@ -7,44 +7,44 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="588.0" prefWidth="418.0" style="-fx-background-color: #C39746;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.gui.AddGuestController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="588.0" prefWidth="424.0" styleClass="root" stylesheets="@styles/style.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.gui.AddGastController">
     <children>
-        <Label layoutX="45.0" layoutY="23.0" text="Add Guest">
+        <Label layoutX="148.0" layoutY="22.0" styleClass="modal-title" text="Add Guest">
             <font>
-                <Font size="25.0" />
+                <Font name="System Bold" size="25.0" />
             </font>
         </Label>
-        <Label layoutX="48.0" layoutY="107.0" text="First Name">
-            <font>
-                <Font size="14.0" />
-            </font>
-        </Label>
-        <Label layoutX="259.0" layoutY="107.0" text="Last Name">
+        <Label layoutX="25.0" layoutY="107.0" text="First Name">
             <font>
                 <Font size="14.0" />
             </font>
         </Label>
-        <Label layoutX="61.0" layoutY="215.0" text="Email">
+        <Label layoutX="229.0" layoutY="107.0" text="Last Name">
             <font>
                 <Font size="14.0" />
             </font>
         </Label>
-        <Label layoutX="42.0" layoutY="326.0" text="Tel-number">
+        <Label layoutX="24.0" layoutY="205.0" text="Email">
             <font>
                 <Font size="14.0" />
             </font>
         </Label>
-        <TextField fx:id="lastNameTxtfield" layoutX="229.0" layoutY="152.0" promptText="Last Name" />
-        <TextField fx:id="emailTxtfield" layoutX="24.0" layoutY="266.0" promptText="name@example.com" />
-        <TextField fx:id="telefonNrTxtfield" layoutX="24.0" layoutY="382.0" promptText="Tel-number" />
-        <TextField fx:id="firstNameTxtfield" layoutX="29.0" layoutY="152.0" promptText="First Name" />
-        <Label layoutX="271.0" layoutY="215.0" text="B-date">
+        <Label layoutX="22.0" layoutY="304.0" text="Tel-number">
             <font>
                 <Font size="14.0" />
             </font>
         </Label>
-        <DatePicker fx:id="dateChooser" layoutX="217.0" layoutY="266.0" />
-        <Button layoutX="98.0" layoutY="491.0" mnemonicParsing="false" onAction="#onClickAddGuest" prefHeight="31.0" prefWidth="222.0" text="Add Guest">
+        <TextField fx:id="firstNameTxtfield" layoutX="24.0" layoutY="140.0" prefHeight="29.0" prefWidth="164.0" promptText="First Name" styleClass="input" />
+        <TextField fx:id="lastNameTxtfield" layoutX="229.0" layoutY="140.0" prefHeight="29.0" prefWidth="172.0" promptText="Last Name" styleClass="input" />
+        <TextField fx:id="emailTxtfield" layoutX="24.0" layoutY="235.0" prefHeight="29.0" prefWidth="164.0" promptText="name@example.com" styleClass="input" />
+        <TextField fx:id="telefonNrTxtfield" layoutX="24.0" layoutY="338.0" prefHeight="29.0" prefWidth="164.0" promptText="Tel-number" styleClass="input" />
+        <Label layoutX="229.0" layoutY="205.0" text="B-date">
+            <font>
+                <Font size="14.0" />
+            </font>
+        </Label>
+        <DatePicker fx:id="dateChooser" layoutX="229.0" layoutY="235.0" prefHeight="29.0" prefWidth="172.0" promptText="2024-03-01" styleClass="birth-input" />
+        <Button fx:id="addGuestBtn" layoutX="98.0" layoutY="491.0" mnemonicParsing="false" onAction="#onClickAddGuest" prefHeight="31.0" prefWidth="222.0" styleClass="add-btn" text="Add Guest">
             <font>
                 <Font size="15.0" />
             </font>
