--- a/Prog3ProjektHotelReservierungsSystem/src/main/resources/com/example/prog3projekthotelreservierungssystem/addMitarbeiter.fxml
+++ b/Prog3ProjektHotelReservierungsSystem/src/main/resources/com/example/prog3projekthotelreservierungssystem/addMitarbeiter.fxml
@@ -2,56 +2,57 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.DatePicker?>
-<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="588.0" prefWidth="418.0" style="-fx-background-color: #C39746;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.gui.AddMitarbeiterController">
+<VBox prefHeight="471.0" prefWidth="467.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.gui.AddMitarbeiterController">
     <children>
-        <Label layoutX="45.0" layoutY="23.0" text="Add Guest">
-            <font>
-                <Font size="25.0" />
-            </font>
-        </Label>
-        <Label layoutX="48.0" layoutY="107.0" text="First Name">
-            <font>
-                <Font size="14.0" />
-            </font>
-        </Label>
-        <Label layoutX="259.0" layoutY="107.0" text="Last Name">
-            <font>
-                <Font size="14.0" />
-            </font>
-        </Label>
-        <Label layoutX="61.0" layoutY="215.0" text="Email">
-            <font>
-                <Font size="14.0" />
-            </font>
-        </Label>
-        <Label layoutX="42.0" layoutY="326.0" text="Tel-number">
-            <font>
-                <Font size="14.0" />
-            </font>
-        </Label>
-        <TextField fx:id="firstNameTxtfield" layoutX="29.0" layoutY="152.0" promptText="First Name" />
-        <TextField fx:id="lastNameTxtfield" layoutX="229.0" layoutY="152.0" promptText="Last Name" />
-        <TextField fx:id="emailTxtfield" layoutX="24.0" layoutY="266.0" promptText="name@example.com" />
-        <DatePicker fx:id="dateChooser" layoutX="217.0" layoutY="266.0" />
-        <TextField fx:id="telefonNrTxtfield" layoutX="24.0" layoutY="382.0" promptText="Tel-number" />
-        <Label layoutX="271.0" layoutY="215.0" text="B-date">
-            <font>
-                <Font size="14.0" />
-            </font>
-        </Label>
-        <Button layoutX="98.0" layoutY="491.0" mnemonicParsing="false" onAction="#onClickAddMitarbeiter" prefHeight="31.0" prefWidth="222.0" text="Add Mitarbeiter">
-            <font>
-                <Font size="15.0" />
-            </font>
-        </Button>
-        <Label fx:id="errorLabel" alignment="CENTER" layoutX="6.0" layoutY="77.0" prefHeight="18.0" prefWidth="406.0" textFill="#ff0900">
-            <font>
-                <Font size="16.0" />
-            </font></Label>
+        <AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="471.0" prefWidth="462.0" styleClass="root" stylesheets="@styles/style.css" VBox.vgrow="ALWAYS">
+            <children>
+                <Text layoutX="153.0" layoutY="50.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="modal-title" text="Add Employees" wrappingWidth="206.13671875">
+                    <font>
+                        <Font size="18.0" />
+                    </font>
+                </Text>
+                <Text layoutX="24.0" layoutY="118.0" strokeType="OUTSIDE" strokeWidth="0.0" text="First Name" wrappingWidth="128.13671875">
+                    <font>
+                        <Font size="18.0" />
+                    </font>
+                </Text>
+                <TextField fx:id="firstNameTxtfield" layoutX="24.0" layoutY="132.0" prefHeight="29.0" prefWidth="170.0" promptText="Mustermann" styleClass="input" />
+                <Text layoutX="275.0" layoutY="117.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Last Name" wrappingWidth="128.13671875">
+                    <font>
+                        <Font size="18.0" />
+                    </font>
+                </Text>
+                <TextField fx:id="lastNameTxtfield" layoutX="274.0" layoutY="132.0" prefHeight="29.0" prefWidth="170.0" promptText="Gabler" styleClass="input" />
+                <Text layoutX="24.0" layoutY="215.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Email" wrappingWidth="128.13671875">
+                    <font>
+                        <Font size="18.0" />
+                    </font>
+                </Text>
+                <TextField fx:id="emailTxtfield" layoutX="24.0" layoutY="230.0" prefHeight="29.0" prefWidth="170.0" promptText="example@gmail.com" styleClass="input" />
+                <Text layoutX="275.0" layoutY="215.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Birth Date" wrappingWidth="128.13671875">
+                    <font>
+                        <Font size="18.0" />
+                    </font>
+                </Text>
+                <DatePicker fx:id="dateChooser" layoutX="277.0" layoutY="230.0" prefHeight="29.0" prefWidth="177.0" promptText="2024-03-01" styleClass="birth-input" />
+                <Text layoutX="24.0" layoutY="311.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Tel-Number" wrappingWidth="128.13671875">
+                    <font>
+                        <Font size="18.0" />
+                    </font>
+                </Text>
+                <TextField fx:id="telefonNrTxtfield" layoutX="24.0" layoutY="328.0" prefHeight="29.0" prefWidth="177.0" promptText="+4915210000000" styleClass="input" />
+                <Button fx:id="addMitarbeiterBtn" layoutX="162.0" layoutY="405.0" mnemonicParsing="false" onAction="#onClickAddMitarbeiter" prefHeight="24.0" prefWidth="143.0" styleClass="add-btn" text="Add ">
+                    <font>
+                        <Font size="22.0" />
+                    </font>
+                </Button>
+            </children>
+        </AnchorPane>
     </children>
-</AnchorPane>
+</VBox>
