--- a/Prog3ProjektHotelReservierungsSystem/src/main/resources/com/example/prog3projekthotelreservierungssystem/Gaeste.fxml
+++ b/Prog3ProjektHotelReservierungsSystem/src/main/resources/com/example/prog3projekthotelreservierungssystem/Gaeste.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
@@ -8,13 +9,15 @@
 
 <AnchorPane prefHeight="518.0" prefWidth="705.0" styleClass="root" stylesheets="@styles/style.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.gui.GaesteController">
     <children>
-        <Text layoutX="33.0" layoutY="51.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="modal-title" text="Guests">
+        <Text layoutX="33.0" layoutY="51.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="modal-title" text="Gäste">
             <font>
                 <Font size="16.0" />
             </font>
         </Text>
         <ListView fx:id="listView" layoutX="33.0" layoutY="78.0" prefHeight="363.0" prefWidth="650.0" />
-        <Button layoutX="33.0" layoutY="461.0" mnemonicParsing="false" onAction="#onClickAddGuest" prefHeight="29.0" prefWidth="94.0" style="-fx-cursor: HAND;" styleClass="dashboard-btn" text="Add Guest" />
+        <Button layoutX="33.0" layoutY="461.0" mnemonicParsing="false" onAction="#onClickAddGuest" prefHeight="29.0" prefWidth="94.0" style="-fx-cursor: HAND;" styleClass="dashboard-btn" text="Add Gast" />
         <Button layoutX="589.0" layoutY="461.0" mnemonicParsing="false" onAction="#onClickDeleteGuest" prefHeight="29.0" prefWidth="94.0" styleClass="cancel-btn" text="Delete" />
+      <Button layoutX="157.0" layoutY="461.0" mnemonicParsing="false" onAction="#onClickEditGast" prefHeight="29.0" prefWidth="94.0" style="-fx-cursor: HAND;" styleClass="dashboard-btn" text="Edit Gast" />
+      <Label fx:id="errorLabel" alignment="CENTER" layoutX="204.0" layoutY="31.0" prefHeight="18.0" prefWidth="296.0" textFill="RED" />
     </children>
 </AnchorPane>
