--- a/Prog3ProjektHotelReservierungsSystem/src/main/resources/com/example/prog3projekthotelreservierungssystem/Zimmern.fxml
+++ b/Prog3ProjektHotelReservierungsSystem/src/main/resources/com/example/prog3projekthotelreservierungssystem/Zimmern.fxml
@@ -1,20 +1,33 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ListView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
+<?import java.lang.*?>
+<?import javafx.collections.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="518.0" prefWidth="705.0" styleClass="root" stylesheets="@styles/style.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.gui.ZimmerController">
+<AnchorPane prefHeight="518.0" prefWidth="705.0" styleClass="root" stylesheets="@styles/style.css" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.gui.ZimmerController">
     <children>
-        <Text layoutX="28.0" layoutY="57.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="modal-title" text="Rooms">
+        <Text layoutX="28.0" layoutY="57.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="modal-title" text="Zimmern">
             <font>
                 <Font size="16.0" />
             </font>
         </Text>
-        <ListView fx:id="listView" layoutX="28.0" layoutY="86.0" prefHeight="363.0" prefWidth="652.0" />
+        <ListView fx:id="listView" layoutX="28.0" layoutY="86.0" prefHeight="363.0" prefWidth="652.0" styleClass="select" />
       <Button layoutX="28.0" layoutY="469.0" mnemonicParsing="false" onAction="#onClickAddRoom" prefHeight="29.0" prefWidth="98.0" style="-fx-cursor: HAND;" styleClass="dashboard-btn" text="Add Room" />
       <Button layoutX="602.0" layoutY="469.0" mnemonicParsing="false" onAction="#onClickDeleteRoom" prefHeight="26.0" prefWidth="78.0" styleClass="cancel-btn" text="Delete" />
+      <ChoiceBox fx:id="floorChoiceBox" layoutX="527.0" layoutY="39.0" prefWidth="150.0" styleClass="select">
+          <items>
+              <FXCollections fx:factory="observableArrayList">
+                  <Integer fx:value="1" />
+                  <Integer fx:value="2" />
+              </FXCollections>
+          </items>
+          <value>
+              <Integer fx:value="1" />
+          </value>
+      </ChoiceBox>
+        <Label fx:id="errorLabel" alignment="CENTER" layoutX="204.0" layoutY="15.0" prefHeight="18.0" prefWidth="296.0" textFill="RED" />
+        <Label layoutX="449.0" layoutY="36.0" prefHeight="38.0" prefWidth="98.0" styleClass="modal-title" text="Floor" />
     </children>
 </AnchorPane>
