--- a/Prog3ProjektHotelReservierungsSystem/src/main/resources/com/example/prog3projekthotelreservierungssystem/addBuchung.fxml
+++ b/Prog3ProjektHotelReservierungsSystem/src/main/resources/com/example/prog3projekthotelreservierungssystem/addBuchung.fxml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.Integer?>
-<?import javafx.collections.FXCollections?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.DatePicker?>
@@ -16,45 +14,32 @@
     <children>
         <AnchorPane prefHeight="504.0" prefWidth="405.0" styleClass="root" stylesheets="@styles/style.css">
             <children>
-                <Text layoutX="113.0" layoutY="53.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="modal-title" text="New Booking">
+                <Text layoutX="113.0" layoutY="53.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="modal-title" text="Neue Buchung">
                     <font>
                         <Font size="26.0" />
                     </font>
                 </Text>
-                <TextField fx:id="guestId" layoutX="13.0" layoutY="122.0" prefHeight="25.0" prefWidth="165.0" promptText="Guest Id" styleClass="input" />
-                <Text layoutX="13.0" layoutY="195.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Departure">
+                <TextField fx:id="guestId" layoutX="13.0" layoutY="122.0" prefHeight="25.0" prefWidth="165.0" promptText="1" styleClass="input" />
+                <Text layoutX="13.0" layoutY="195.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Abreise">
                     <font>
                         <Font size="20.0" />
                     </font>
                 </Text>
-                <Text layoutX="223.0" layoutY="109.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Arrival">
+                <Text layoutX="223.0" layoutY="109.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Ankunft">
                     <font>
                         <Font size="20.0" />
                     </font>
                 </Text>
                 <DatePicker fx:id="departureDateChooser" layoutX="13.0" layoutY="211.0" prefHeight="31.0" prefWidth="165.0" promptText="2024-03-01" styleClass="birth-input" />
                 <DatePicker fx:id="arrivalDateChooser" layoutX="223.0" layoutY="122.0" prefHeight="31.0" prefWidth="165.0" promptText="2024-03-03" styleClass="birth-input" />
-                <Text layoutX="13.0" layoutY="286.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Floor">
+                <Text layoutX="222.0" layoutY="196.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Zimmer">
                     <font>
                         <Font size="20.0" />
                     </font>
                 </Text>
-                <Text layoutX="222.0" layoutY="196.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Room">
-                    <font>
-                        <Font size="20.0" />
-                    </font>
-                </Text>
-                <ChoiceBox fx:id="floorChoiceBox" layoutX="14.0" layoutY="302.0" prefHeight="25.0" prefWidth="165.0" styleClass="select">
-                <items>
-                    <FXCollections fx:factory="observableArrayList">
-                        <Integer fx:value="1" />
-                        <Integer fx:value="2" />
-                    </FXCollections>
-                </items>
-                </ChoiceBox>
                 <ChoiceBox fx:id="roomChoiceBox" layoutX="223.0" layoutY="211.0" prefHeight="25.0" prefWidth="165.0" styleClass="select" />
-                <Button fx:id="addBookingBtn" layoutX="122.0" layoutY="432.0" mnemonicParsing="false" onAction="#onClickAddBooking" styleClass="add-btn" text="Add booking" />
-            <Text layoutX="14.0" layoutY="108.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Guest Id">
+                <Button fx:id="addBookingBtn" layoutX="122.0" layoutY="432.0" mnemonicParsing="false" onAction="#onClickAddBooking" styleClass="add-btn" text="Add Buchung" />
+            <Text layoutX="14.0" layoutY="108.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Gast Id">
                <font>
                   <Font size="20.0" />
                </font>
