--- a/Prog3ProjektHotelReservierungsSystem/src/main/resources/com/example/prog3projekthotelreservierungssystem/addMitarbeiter.fxml
+++ b/Prog3ProjektHotelReservierungsSystem/src/main/resources/com/example/prog3projekthotelreservierungssystem/addMitarbeiter.fxml
@@ -12,18 +12,18 @@
     <children>
         <AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="471.0" prefWidth="462.0" styleClass="root" stylesheets="@styles/style.css" VBox.vgrow="ALWAYS">
             <children>
-                <Text layoutX="153.0" layoutY="50.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="modal-title" text="Add Employees" wrappingWidth="206.13671875">
+                <Text layoutX="153.0" layoutY="50.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="modal-title" text="Add Mitarbeiter" wrappingWidth="206.13671875">
                     <font>
                         <Font size="18.0" />
                     </font>
                 </Text>
-                <Text layoutX="24.0" layoutY="118.0" strokeType="OUTSIDE" strokeWidth="0.0" text="First Name" wrappingWidth="128.13671875">
+                <Text layoutX="24.0" layoutY="118.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Vorname" wrappingWidth="128.13671875">
                     <font>
                         <Font size="18.0" />
                     </font>
                 </Text>
                 <TextField fx:id="firstNameTxtfield" layoutX="24.0" layoutY="132.0" prefHeight="29.0" prefWidth="170.0" promptText="Mustermann" styleClass="input" />
-                <Text layoutX="275.0" layoutY="117.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Last Name" wrappingWidth="128.13671875">
+                <Text layoutX="275.0" layoutY="117.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Nachname" wrappingWidth="128.13671875">
                     <font>
                         <Font size="18.0" />
                     </font>
@@ -35,19 +35,19 @@
                     </font>
                 </Text>
                 <TextField fx:id="emailTxtfield" layoutX="24.0" layoutY="230.0" prefHeight="29.0" prefWidth="170.0" promptText="example@gmail.com" styleClass="input" />
-                <Text layoutX="275.0" layoutY="215.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Birth Date" wrappingWidth="128.13671875">
+                <Text layoutX="275.0" layoutY="215.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Geburtsdatum" wrappingWidth="128.13671875">
                     <font>
                         <Font size="18.0" />
                     </font>
                 </Text>
                 <DatePicker fx:id="dateChooser" layoutX="277.0" layoutY="230.0" prefHeight="29.0" prefWidth="177.0" promptText="2024-03-01" styleClass="birth-input" />
-                <Text layoutX="24.0" layoutY="311.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Tel-Number" wrappingWidth="128.13671875">
+                <Text layoutX="24.0" layoutY="311.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Telefonnummer" wrappingWidth="128.13671875">
                     <font>
                         <Font size="18.0" />
                     </font>
                 </Text>
                 <TextField fx:id="telefonNrTxtfield" layoutX="24.0" layoutY="328.0" prefHeight="29.0" prefWidth="177.0" promptText="+4915210000000" styleClass="input" />
-                <Button fx:id="addMitarbeiterBtn" layoutX="162.0" layoutY="405.0" mnemonicParsing="false" onAction="#onClickAddMitarbeiter" prefHeight="24.0" prefWidth="143.0" styleClass="add-btn" text="Add ">
+                <Button fx:id="addMitarbeiterBtn" layoutX="162.0" layoutY="405.0" mnemonicParsing="false" onAction="#onClickAddMitarbeiter" prefHeight="24.0" prefWidth="143.0" styleClass="add-btn" text="Add Mitarbeiter">
                     <font>
                         <Font size="22.0" />
                     </font>
